Bug 488555 - drkonqi unable to detect virtualization due to dbus issue
Summary: drkonqi unable to detect virtualization due to dbus issue
Status: RESOLVED FIXED
Alias: None
Product: drkonqi
Classification: Applications
Component: general (show other bugs)
Version: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-06-15 20:17 UTC by Fabian Vogt
Modified: 2024-06-18 10:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabian Vogt 2024-06-15 20:17:09 UTC
While trying drkonqi 6.1 inside a VM, I noticed that drkonqi-sentry-data returns

"Virtualization": false

even though it's a VM.

Some debugging shows that the DBus property of systemd is properly set, but Qt isn't able to read it. QDBusInterface says it's valid, but QMetaObject claims it has no properties. Fetching properties from fdo hostname and timedate services works.
Comment 1 Harald Sitter 2024-06-17 14:21:01 UTC
Thanks for catching that!
Comment 2 Bug Janitor Service 2024-06-17 14:24:18 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/drkonqi/-/merge_requests/243
Comment 3 Harald Sitter 2024-06-17 17:58:14 UTC
Git commit e81309bca157f82275af83c05c935898adae07c0 by Harald Sitter.
Committed on 17/06/2024 at 14:23.
Pushed by sitter into branch 'master'.

sentry: correctly use dbus interface name

previously we used the service which happens to work for hostname1
because the service name and interface name are the same. broke for
systemd1 because there the names are not the same

M  +1    -1    src/sentry/data/main.cpp

https://invent.kde.org/plasma/drkonqi/-/commit/e81309bca157f82275af83c05c935898adae07c0
Comment 4 Harald Sitter 2024-06-18 10:49:53 UTC
Git commit 2aeff3c425ed1e118d208a5e7f8af3294443bf7c by Harald Sitter.
Committed on 17/06/2024 at 17:58.
Pushed by sitter into branch 'Plasma/6.1'.

sentry: correctly use dbus interface name

previously we used the service which happens to work for hostname1
because the service name and interface name are the same. broke for
systemd1 because there the names are not the same


(cherry picked from commit e81309bca157f82275af83c05c935898adae07c0)

Co-authored-by: Harald Sitter <sitter@kde.org>

M  +1    -1    src/sentry/data/main.cpp

https://invent.kde.org/plasma/drkonqi/-/commit/2aeff3c425ed1e118d208a5e7f8af3294443bf7c