sentry: correctly use dbus interface name

previously we used the service which happens to work for hostname1
because the service name and interface name are the same. broke for
systemd1 because there the names are not the same

BUG: 488555